--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingStart="20dp"
     android:paddingEnd="20dp">
@@ -13,40 +13,39 @@
         android:id="@+id/image"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/login_37128"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="40dp"/>
+        android:layout_marginTop="40dp"
+        android:src="@drawable/login_37128" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/username_txi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/username"
         android:layout_marginTop="40dp"
-        android:textColorHint="@color/white"
-        >
+        android:hint="@string/username"
+        android:textColorHint="@color/white">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/quantum_purple700"
-            />
+            android:background="@color/quantum_purple700" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/password_txi"
-        app:endIconMode="password_toggle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:hint="@string/password"
         android:textColorHint="@color/white"
-        android:layout_marginTop="40dp">
+        app:endIconMode="password_toggle">
+
         <com.google.android.material.textfield.TextInputEditText
-            android:inputType="textPassword"
-            android:background="@color/quantum_purple700"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:background="@color/quantum_purple700"
+            android:inputType="textPassword" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -63,17 +62,17 @@
             android:layout_gravity="left"
             android:layout_marginTop="60dp"
             android:layout_marginRight="100dp"
-            android:textColor="@color/white"
-            android:text="@string/login" />
+            android:text="@string/login"
+            android:textColor="@color/white" />
 
         <Button
             android:id="@+id/goToSignIn"
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
             android:layout_gravity="left"
-            android:text="@string/go_to_sign_in" />
+            android:text="@string/go_to_sign_in"
+            android:textColor="@color/white" />
     </LinearLayout>
 
 </LinearLayout>
