--- a/app/src/main/res/layout/fragment_signin.xml
+++ b/app/src/main/res/layout/fragment_signin.xml
@@ -31,14 +31,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
-                android:textColorHint="@color/white"
-                android:hint="@string/name">
+                android:hint="@string/name"
+                android:textColorHint="@color/white">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/quantum_purple700"
-                    />
+                    android:background="@color/quantum_purple700" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -47,13 +46,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:textColorHint="@color/white"
-                android:hint="@string/surname">
+                android:hint="@string/surname"
+                android:textColorHint="@color/white">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/quantum_purple700"/>
+                    android:background="@color/quantum_purple700" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -62,13 +61,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:textColorHint="@color/white"
-                android:hint="@string/email">
+                android:hint="@string/email"
+                android:textColorHint="@color/white">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/quantum_purple700"/>
+                    android:background="@color/quantum_purple700" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -77,13 +76,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:textColorHint="@color/white"
-                android:hint="@string/address">
+                android:hint="@string/address"
+                android:textColorHint="@color/white">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/quantum_purple700"/>
+                    android:background="@color/quantum_purple700" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -93,13 +92,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:textColorHint="@color/white"
-                android:hint="@string/phone">
+                android:hint="@string/phone"
+                android:textColorHint="@color/white">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/quantum_purple700"/>
+                    android:background="@color/quantum_purple700" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -108,13 +107,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:textColorHint="@color/white"
-                android:hint="@string/username">
+                android:hint="@string/username"
+                android:textColorHint="@color/white">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/quantum_purple700"/>
+                    android:background="@color/quantum_purple700" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -123,14 +122,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:textColorHint="@color/white"
-                android:hint="@string/password">
+                android:hint="@string/password"
+                android:textColorHint="@color/white">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:inputType="textPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/quantum_purple700"/>
+                    android:background="@color/quantum_purple700"
+                    android:inputType="textPassword" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -138,14 +137,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:textColorHint="@color/white"
-                android:hint="@string/confirm_password">
+                android:hint="@string/confirm_password"
+                android:textColorHint="@color/white">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:inputType="textPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/quantum_purple700"/>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/quantum_purple700"
+                    android:inputType="textPassword" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
