--- a/app/src/main/res/layout/password_update_activity.xml
+++ b/app/src/main/res/layout/password_update_activity.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/background"
     android:orientation="vertical"
     android:paddingStart="20dp"
@@ -13,58 +13,61 @@
         android:id="@+id/image"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/change_password_img"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="40dp"/>
+        android:layout_marginTop="40dp"
+        android:src="@drawable/change_password_img" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/oldPsw_txi"
-        app:endIconMode="password_toggle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:hint="@string/old_password"
         android:textColorHint="@color/white"
-        android:layout_marginTop="40dp">
+        app:endIconMode="password_toggle">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:inputType="textPassword"
-            android:background="@color/quantum_purple700"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:background="@color/quantum_purple700"
+            android:inputType="textPassword" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/newPsw_txi"
-        app:endIconMode="password_toggle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:hint="@string/new_password"
         android:textColorHint="@color/white"
-        android:layout_marginTop="40dp">
+        app:endIconMode="password_toggle">
+
         <com.google.android.material.textfield.TextInputEditText
-            android:inputType="textPassword"
-            android:background="@color/quantum_purple700"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:background="@color/quantum_purple700"
+            android:inputType="textPassword" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/confirmNewPsw_txi"
-        app:endIconMode="password_toggle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:hint="@string/confirm_password"
         android:textColorHint="@color/white"
-        android:layout_marginTop="40dp">
+        app:endIconMode="password_toggle">
+
         <com.google.android.material.textfield.TextInputEditText
-            android:inputType="textPassword"
-            android:background="@color/quantum_purple700"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:background="@color/quantum_purple700"
+            android:inputType="textPassword" />
 
     </com.google.android.material.textfield.TextInputLayout>
+
     <Button
         android:id="@+id/enter_Btn"
         android:layout_width="wrap_content"
