--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -76,7 +76,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="506dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="32dp"
@@ -87,22 +87,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/myReviewRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="418dp"
+            android:layout_height="353dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="20dp"
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="0dp" />
 
+
         <ImageButton
             android:id="@+id/addReviewBtn"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:src="@drawable/new_review">
-
-        </ImageButton>
+            android:contentDescription="@string/add_review"
+            android:src="@drawable/new_review" />
     </LinearLayout>
 
 
