--- a/app/src/main/res/layout/update_review_activity.xml
+++ b/app/src/main/res/layout/update_review_activity.xml
@@ -83,6 +83,8 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:digits="abcdefghijklmnopqrstuvwxyz"
+                    android:inputType="textFilter"
                     android:background="@color/quantum_purple700" />
 
             </com.google.android.material.textfield.TextInputLayout>
