--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -21,7 +21,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="5dp"
             android:layout_weight="0.5"
-            android:text="profile"
+            android:text="my profile"
             android:textSize="12dp" />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -32,7 +32,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="5dp"
             android:layout_weight="1"
-            android:hint="Hotel"
+            android:hint="hotel"
             android:textColorHint="@color/white">
 
             <com.google.android.material.textfield.TextInputEditText
