refactor + horizontal rw

--- a/app/src/main/res/layout/signin_activity.xml
+++ b/app/src/main/res/layout/signin_activity.xml
@@ -14,7 +14,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@android:color/transparent"
             android:orientation="vertical">
 
 
@@ -24,30 +23,21 @@
                 android:layout_height="100dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="40dp"
-                android:src="@drawable/editinguser_edituser_useedit_4520" />
-
-<Button
-    android:id="@+id/changePassword"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/changePassword"
-    />
+                android:src="@drawable/icon1" />
 
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/name_txi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColorHint="@color/white"
                 android:layout_marginTop="40dp"
+                android:textColorHint="@color/white"
                 android:hint="@string/name">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:textColorHint="@color/white"
-                    android:textColor="@color/white"
-                    android:background="@color/quantum_purple700"/>
+                    android:background="@color/quantum_purple700" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -62,8 +52,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColorHint="@color/white"
-                    android:background="@color/quantum_purple700"/>
+                    android:background="@color/quantum_purple700" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -78,8 +67,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColorHint="@color/white"
-                    android:background="@color/quantum_purple700"/>
+                    android:background="@color/quantum_purple700" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -94,10 +82,10 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColorHint="@color/white"
-                    android:background="@color/quantum_purple700"/>
+                    android:background="@color/quantum_purple700" />
 
             </com.google.android.material.textfield.TextInputLayout>
+
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/phone_txi"
@@ -110,8 +98,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColorHint="@color/white"
-                    android:background="@color/quantum_purple700"/>
+                    android:background="@color/quantum_purple700" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -128,20 +115,53 @@
                     android:layout_height="wrap_content"
                     android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
                     android:inputType="textFilter"
-                    android:textColorHint="@color/white"
-                    android:textColor="@color/white"
-                    android:background="@color/quantum_purple700"/>
+                    android:background="@color/quantum_purple700" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/password_txi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:textColorHint="@color/white"
+                android:hint="@string/password">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:inputType="textPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/quantum_purple700" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/confirmPassword_txi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:textColorHint="@color/white"
+                android:hint="@string/confirm_password">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:inputType="textPassword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/quantum_purple700" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
 
             <Button
-                android:id="@+id/saveBtn"
+                android:id="@+id/enter_Btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:text="@string/save" />
+                android:layout_marginTop="20dp"
+                android:background="@color/quantum_purple700"
+                android:text="@string/enter"
+                android:textColor="@color/white" />
         </LinearLayout>
+
     </ScrollView>
 
 </RelativeLayout>
